--- a/views/add_menu.html
+++ b/views/add_menu.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-        <title>Add Menu</title>
+        <title>Chỉnh sửa thực đơn</title>
         <meta content="" name="description" />
         <meta content="" name="keywords" />
 
@@ -96,12 +96,6 @@
                             />
                         </div>
                     </div>
-                    <input
-                        type="button"
-                        class="btn-delete"
-                        name="hide"
-                        id="hide"
-                        value="Hide"/>
                     <input class="btn btn-success" value="Lưu" type="submit" />
                 </form>
             </div>
