--- a/views/navbar.html
+++ b/views/navbar.html
@@ -23,7 +23,7 @@
                     <span>Thực đơn</span>
                 </a>
                 <a
-                    href="#"
+                    href="/admin/arrival"
                     class="list-group-item list-group-item-action py-2 ripple"
                 >
                     <i class="fas fa-chart-line fa-fw me-3"></i>
