--- a/views/add_chef.html
+++ b/views/add_chef.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-        <title>Add Chef</title>
+        <title>Chỉnh sửa đầu bếp</title>
         <meta content="" name="description" />
         <meta content="" name="keywords" />
 
