--- a/views/assets/css/style.css
+++ b/views/assets/css/style.css
@@ -2,7 +2,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   color: #444444;
 }
 
@@ -146,7 +146,7 @@ h1, h2, h3, h4, h5, h6 {
 /**
 * Desktop Navigation 
 */
-.navbar {
+.navbar { 
   padding: 0;
 }
 .navbar ul {
@@ -957,8 +957,8 @@ section {
 .book-a-table .php-email-form .error-message {
   display: none;
   color: #fff;
-  background: #ed3c0d;
-  text-align: left;
+  background: #18d26e;
+  text-align: center;
   padding: 15px;
   font-weight: 600;
 }
