--- a/views/arrival.html
+++ b/views/arrival.html
@@ -54,20 +54,34 @@
             <ul>
                 <li>
                 {{range .}}
-                <a href="#">
+                <div >
                     <h2>Bàn {{.ID}}</h2>
-                    <p>{{.Uname}}</p>
-                    <p>{{.Umail}}</p>
-                    <p>{{.Uphone}}</p>
-                    <p>{{.Date}}</p>
-                    <p>{{.Time}}</p>
-                    <p>{{.Ofpeople}}</p>
-                    <p>{{.Message}}</p>
-                </a>
+                    <p>Tên KH: {{.Uname}}</p>
+                    <p>Email KH: {{.Umail}}</p>
+                    <p>Sđt KH:{{.Uphone}}</p>
+                    <p>Ngày đến: {{.Date}}</p>
+                    <p>Thời gian: {{.Time}}</p>
+                    <p>Số người: {{.Ofpeople}}</p>
+                    <p>Lời nhắn: {{.Message}}</p>
+                    <table>
+                        <tr>
+                            <td>
+                                <button id="result" onclick="changeColor()" style="background-color: red;">KH chưa đến</button>
+                                    <script>
+                                    function changeColor() {
+                                        var result = document.getElementById("result");
+                                        result.style.backgroundColor = "green";
+                                        result.innerHTML='KH đã đến'
+                                    }
+                                    </script>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
                 {{end}}
                 </li>
             </ul>
-         <!-- Vendor JS Files -->
+         <!-- Vendor JS Files
         <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
         <script src="/assets/vendor/glightbox/js/glightbox.min.js"></script>
         <script src="/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
@@ -75,5 +89,5 @@
         <script src="/assets/vendor/php-email-form/validate.js"></script>
 
         <!-- Template Main JS File -->
-        <script src="/assets/js/main.js"></script>
+        <script src="/assets/js/main.js"></script> -->
     </body>
