--- a/views/assets/css/arrival.css
+++ b/views/assets/css/arrival.css
@@ -1,9 +1,8 @@
 body {
-    margin: 20px auto;
-    font-family: 'Lato';
+    margin:20px auto;
+    font-family: Arial, Helvetica, sans-serif;
     background:rgb(255, 255, 255);
     color:#fff;
-    
   }
    
   *{
@@ -12,12 +11,13 @@ body {
   }
    
   h2 {
+    text-align: center;
     font-weight: bold;
     font-size: 2rem;
   }
    
   p {
-    font-size: 1rem;
+    font-size: 15px;
     font-weight: normal;
   }
    
@@ -27,17 +27,30 @@ body {
   ul{
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    margin-left: 200px;
+    
   }
-  ul li a{
-    text-decoration:none;
-    color:rgb(0, 0, 0);
-    background:rgb(130, 207, 255);
-    display:block;
-    height:20em;
+  ul li div{
+    border: #8B4513 5px ridge;
+    border-radius: 5px ;
+    color: #8B4513 ;
+    background:#F5F5DC;
+    display:inline-block;
+    height:auto;
     width:20em;
-    padding:1em;
+    margin-bottom: 1em;
+    margin-left: 1em;
+    padding: 4px;
   }
   ul li{
     margin:1em;
+  }
+  ul li div table{
+    margin: 5px;
+  }
+  ul li div table tr{
+    margin: 5px;
+  }
+  ul li div table tr td{
+    padding-left: 30px;
   }
