--- a/views/arrival.html
+++ b/views/arrival.html
@@ -66,14 +66,42 @@
                     <table>
                         <tr>
                             <td>
-                                <button id="result" onclick="changeColor()" style="background-color: red;">KH chưa đến</button>
-                                    <script>
-                                    function changeColor() {
-                                        var result = document.getElementById("result");
-                                        result.style.backgroundColor = "green";
-                                        result.innerHTML='KH đã đến'
-                                    }
-                                    </script>
+                                {{if ne .Check true}}
+                                <form action="/admin/arrivalcheck/action/{{.ID}}" method="post">
+                                        <button
+                                            name="check"
+                                            type="submit"
+                                            style="
+                                            margin-left: 85px;
+                                            background-color: red;
+                                            border:none;
+                                            border-radius: 20px;
+                                            width: 110px;
+                                            height: 30px;">
+                                            KH chưa đến
+                                        </button>
+                                </form>
+                                {{else}}
+                                {{end}}
+                                </td>
+                                <td>
+                                {{if ne .Check false}}
+                                <form action="/admin/arrivalchecked/action/{{.ID}}" method="post">
+                                        <button
+                                            name="check"
+                                            type="submit"
+                                            style="
+                                            margin-left: 85px;
+                                            background-color: rgb(2, 233, 2);
+                                            border:none;
+                                            border-radius: 20px;
+                                            width: 110px;
+                                            height: 30px;">
+                                            KH đã đến
+                                        </button>
+                                </form>
+                                {{else}}
+                                {{end}}
                             </td>
                         </tr>
                     </table>
