--- a/views/navbar.html
+++ b/views/navbar.html
@@ -30,7 +30,7 @@
                     <span>Danh sách đặt bàn</span>
                 </a>
                 <a
-                    href="#"
+                    href="/admin/contact"
                     class="list-group-item list-group-item-action py-2 ripple"
                 >
                     <i class="fas fa-chart-pie fa-fw me-3"></i>
