--- a/views/add_menu.html
+++ b/views/add_menu.html
@@ -52,6 +52,9 @@
         {{template "navbar"}}
         <!--Main layout-->
         <main style="margin-top: 58px">
+            <label style="font-size: 35px; padding-left: 400px;font-weight: 100;">
+            Thêm thực đơn
+            </label>
             <div class="container pt-4">
                 <form action="/admin/addmenu/action" method="post">
                     <div class="mb-3 row">
