--- a/views/navbar.html
+++ b/views/navbar.html
@@ -41,14 +41,14 @@
                 class="list-group-item list-group-item-action py-2 ripple"
                 >
                 <i class="fas fa-chart-pie fa-fw me-3"></i>
-                <span>Chỉnh sửa đầu bếp</span>
+                <span>Thêm đầu bếp</span>
                 </a>
                 <a
                 href="/admin/addmenu"
                 class="list-group-item list-group-item-action py-2 ripple"
                 >
                 <i class="fas fa-chart-pie fa-fw me-3"></i>
-                <span>Chỉnh sửa menu</span>
+                <span>Thêm món ăn</span>
                 </a>
 
             </div>
