--- a/views/admin.html
+++ b/views/admin.html
@@ -51,6 +51,9 @@
     {{template "navbar"}}
     <!--Main layout-->
     <main style="margin-top: 58px">
+        <label style="font-size: 35px; padding-left: 400px;font-weight: 100;">
+            Đầu bếp
+            </label>
         <div class="container pt-4">
             <table class="table">
                 <thead>
