--- a/views/admin_menu.html
+++ b/views/admin_menu.html
@@ -52,6 +52,9 @@
     {{template "navbar"}}
     <!--Main layout-->
     <main style="margin-top: 58px">
+        <label style="font-size: 35px; padding-left: 400px;font-weight: 100;">
+            Thực đơn
+            </label>
         <div class="container pt-4">
             <table class="table">
                 <thead>
