--- a/views/index.html
+++ b/views/index.html
@@ -118,12 +118,14 @@
                             </a>
                         </li>
                     </ul>
-                    <i class="bi bi-list mobile-nav-toggle"></i>
                 </nav>
                 <!-- .navbar -->
 
                 <a href="#book-a-table" class="book-a-table-btn scrollto">
                     Đặt bàn
+                </a>
+                <a href="/login" class="book-a-table-btn scrollto">
+                    Admin
                 </a>
             </div>
         </header>
@@ -422,24 +424,9 @@
                             <span>Món ăn</span>
                         </h2>
                     </div>
-
-                    <div class="row">
-                        <div class="col-lg-12 d-flex justify-content-center">
-                            <ul id="menu-flters">
-                                <li data-filter="*" class="filter-active">
-                                    Show All
-                                </li>
-                                <li data-filter=".filter-starters">Starters</li>
-                                <li data-filter=".filter-salads">Salads</li>
-                                <li data-filter=".filter-specialty">
-                                    Specialty
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
                     <div class="row menu-container">
                         {{range .Products}}
-                        <div class="col-lg-6 menu-item filter-starters">
+                        <div class="col-lg-6 menu-item">
                             <div class="menu-content">
                                 <a href="#">{{.Name}}</a>
                                 <span>{{.Price}}VNĐ</span>
@@ -912,9 +899,11 @@
                             <span>Bàn</span>
                         </h2>
                         <p>
-                            Ut possimus qui ut temporibus culpa velit eveniet
-                            modi omnis est adipisci expedita at voluptas atque
-                            vitae autem.
+                            Quý khách có thể đặt bàn trước để có trải nghiệm tuyệt vời nhất tại nhà hàng chúng tôi
+                            với món ăn ngon nhất và vị trí đẹp nhất trong nhà hàng.
+                            <br><br>
+                            Vui lòng để lại thông tin tại đây,
+                            chúng tôi sẽ liên hệ qua số điện thoại quý khách để xác nhận thông tin.
                         </p>
                     </div>
 
@@ -954,9 +943,9 @@
                                 class="col-lg-4 col-md-6 form-group mt-3 mt-md-0"
                             >
                                 <input
-                                    type="text"
+                                    type="number"
                                     class="form-control"
-                                    name="phone"
+                                    name="uphone"
                                     id="phone"
                                     placeholder="Số điện thoại"
                                     data-rule="minlen:4"
@@ -966,11 +955,12 @@
                             </div>
                             <div class="col-lg-4 col-md-6 form-group mt-3">
                                 <input
-                                    type="text"
+                                    type="date"
+                                    date-format="dd-mm-yyyy"
                                     name="date"
                                     class="form-control"
                                     id="date"
-                                    placeholder="Ngày/tháng/năm"
+                                    placeholder="Ngày/Tháng/Năm"
                                     data-rule="minlen:4"
                                     data-msg="Vui lòng nhập ngày bạn đến"
                                 />
@@ -978,7 +968,7 @@
                             </div>
                             <div class="col-lg-4 col-md-6 form-group mt-3">
                                 <input
-                                    type="text"
+                                    type="time"
                                     class="form-control"
                                     name="time"
                                     id="time"
@@ -1006,21 +996,17 @@
                                 class="form-control"
                                 name="mess"
                                 rows="5"
-                                placeholder="Lời nhắn cho chúng tôi"
+                                placeholder="Nhập yêu cầu của bạn (vd: gần cửa sổ, phòng riêng,...)"
                             ></textarea>
                             <div class="validate"></div>
                         </div>
-                        <div class="mb-3">
-                            <div class="loading">Loading</div>
-                            <div class="error-message"></div>
-                            <div class="sent-message">
+                        <div class="sent-message">
                                 Yêu cầu đặt bàn của bạn đã được gửi. Chúng tôi sẽ gọi lại
                                 hoặc gửi Email để xác nhận đặt phòng của bạn.
                                 Cảm ơn bạn!
-                            </div>
                         </div>
                         <div class="text-center">
-                            <button type="submit">Send Message</button>
+                            <button type="submit">Gửi thông tin</button>
                         </div>
                     </form>
                 </div>
@@ -1043,53 +1029,21 @@
                     </div>
 
                     <div class="row">
+                        {{range .Peoples}}
                         <div class="col-lg-4 col-md-6">
                             <div class="member">
                                 <div class="pic">
-                                    <img
-                                        src="assets/img/chefs/chefs-1.jpg"
-                                        class="img-fluid"
-                                        alt=""
-                                    />
+                                    <p
+                                        {{.Picture}}
+                                        class="img-fluid"/>
                                 </div>
                                 <div class="member-info">
-                                    <h4>Walter White</h4>
-                                    <span>Master Chef</span>
+                                    <h4>{{.Names}}</h4>
+                                    <span>{{.Position}}</span>
                                 </div>
                             </div>
                         </div>
-
-                        <div class="col-lg-4 col-md-6">
-                            <div class="member">
-                                <div class="pic">
-                                    <img
-                                        src="assets/img/chefs/chefs-2.jpg"
-                                        class="img-fluid"
-                                        alt=""
-                                    />
-                                </div>
-                                <div class="member-info">
-                                    <h4>Sarah Jhonson</h4>
-                                    <span>Patissier</span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6">
-                            <div class="member">
-                                <div class="pic">
-                                    <img
-                                        src="assets/img/chefs/chefs-3.jpg"
-                                        class="img-fluid"
-                                        alt=""
-                                    />
-                                </div>
-                                <div class="member-info">
-                                    <h4>William Anderson</h4>
-                                    <span>Cook</span>
-                                </div>
-                            </div>
-                        </div>
+                        {{end}}
                     </div>
                 </div>
             </section>
@@ -1418,23 +1372,6 @@
                     Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis
                     magni eligendi fuga maxime saepe commodi placeat.
                 </p>
-                <div class="social-links">
-                    <a href="#" class="twitter">
-                        <i class="bx bxl-twitter"></i>
-                    </a>
-                    <a href="#" class="facebook">
-                        <i class="bx bxl-facebook"></i>
-                    </a>
-                    <a href="#" class="instagram">
-                        <i class="bx bxl-instagram"></i>
-                    </a>
-                    <a href="#" class="google-plus">
-                        <i class="bx bxl-skype"></i>
-                    </a>
-                    <a href="#" class="linkedin">
-                        <i class="bx bxl-linkedin"></i>
-                    </a>
-                </div>
             </div>
         </footer>
         <!-- End Footer -->
