--- a/views/contact.html
+++ b/views/contact.html
@@ -58,7 +58,7 @@
                     <h2>{{.ID}}</h2>
                     <p>Tên KH: {{.Yname}}</p>
                     <p>Email KH: {{.Ymail}}</p>
-                    <p>Thời gian: {{.Topic}}</p>
+                    <p>Chủ đề: {{.Topic}}</p>
                     <p>Lời nhắn: {{.Ymess}}</p>
                 </div>
                 {{end}}
