--- a/views/index.html
+++ b/views/index.html
@@ -75,9 +75,7 @@
                 class="container-fluid container-xl d-flex align-items-center justify-content-between"
             >
                 <div class="logo me-auto">
-                    <h1><a href="index.html">Delicious</a></h1>
-                    <!-- Uncomment below if you prefer to use an image logo -->
-                    <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+                    <h1><a href="index.html">Jolly Jolly</a></h1>
                 </div>
 
                 <nav id="navbar" class="navbar order-last order-lg-0">
@@ -1000,11 +998,11 @@
                             ></textarea>
                             <div class="validate"></div>
                         </div>
-                        <div class="sent-message">
+                        <!-- <div class="sent-message">
                                 Yêu cầu đặt bàn của bạn đã được gửi. Chúng tôi sẽ gọi lại
                                 hoặc gửi Email để xác nhận đặt phòng của bạn.
                                 Cảm ơn bạn!
-                        </div>
+                        </div> -->
                         <div class="text-center">
                             <button type="submit">Gửi thông tin</button>
                         </div>
@@ -1347,12 +1345,8 @@
                                 required
                             ></textarea>
                         </div>
-                        <div class="my-3">
-                            <div class="loading">Loading</div>
-                            <div class="error-message"></div>
-                            <div class="sent-message">
-                                Lời nhắn của bạn đã được gửi. Xin cảm ơn!
-                            </div>
+                        <div class="sent-message">
+                            Lời nhắn của bạn đã được gửi. Xin cảm ơn!
                         </div>
                         <div class="text-center">
                             <button type="submit">Gửi</button>
@@ -1367,10 +1361,11 @@
         <!-- ======= Footer ======= -->
         <footer id="footer">
             <div class="container">
-                <h3>Delicious</h3>
+                <h3>Jolly Jolly Resraurant</h3>
                 <p>
-                    Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis
-                    magni eligendi fuga maxime saepe commodi placeat.
+                    Rất cảm ơn quý khách hàng đã ghé thăm nhà hàng của chúng tôi.
+                    <br>
+                    Hotline: +84 938734110
                 </p>
             </div>
         </footer>
@@ -1388,6 +1383,7 @@
         <script src="/assets/vendor/glightbox/js/glightbox.min.js"></script>
         <script src="/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
         <script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
+        <script src="/assets/vendor/php-email-form/validate.js"></script>
 
         <!-- Template Main JS File -->
         <script src="/assets/js/main.js"></script>
