--- a/views/add_chef.html
+++ b/views/add_chef.html
@@ -56,7 +56,7 @@
                 Thêm đầu bếp
                 </label>
             <div class="container pt-4">
-                <form action="/admin/addchef/action" method="post">
+                <form action="/admin/addchef/action" method="post" enctype="multipart/form-data">
                     <div class="mb-3 row">
                         <label for="ten" class="col-sm-2 col-form-label">
                             Tên
