--- a/views/admin.html
+++ b/views/admin.html
@@ -70,7 +70,9 @@
                         <th scope="row">{{.ID}}</th>
                         <td>{{.Names}}</td>
                         <td>{{.Position}}</td>
-                        <td>{{.Picture}}</td>
+                        <td>{{.Picture}}
+                            <a href="/image"><img src="/thumbnail"></a>
+                        </td>
                     </tr>
                     {{end}}
                 </tbody>
