--- a/views/index.html
+++ b/views/index.html
@@ -1237,9 +1237,9 @@
                             <span>Liên hệ</span>
                         </h2>
                         <p>
-                            Ut possimus qui ut temporibus culpa velit eveniet
-                            modi omnis est adipisci expedita at voluptas atque
-                            vitae autem.
+                            Mọi thắc mắc về nhà hàng, 
+                            quý khách có thể liên hệ với 
+                            chúng tôi bằng các thông tin sau đây.
                         </p>
                     </div>
                 </div>
@@ -1349,7 +1349,8 @@
                             Lời nhắn của bạn đã được gửi. Xin cảm ơn!
                         </div>
                         <div class="text-center">
-                            <button type="submit">Gửi</button>
+                            <button type="submit" onclick="contact()">Gửi</button>
+                            <p id="thanks"></p>
                         </div>
                     </form>
                 </div>
