--- a/views/admin.html
+++ b/views/admin.html
@@ -70,8 +70,8 @@
                         <th scope="row">{{.ID}}</th>
                         <td>{{.Names}}</td>
                         <td>{{.Position}}</td>
-                        <td>{{.Picture}}
-                            <a href="/image"><img src="/thumbnail"></a>
+                        <td>
+                            <img src={{.Picture}}/>
                         </td>
                     </tr>
                     {{end}}
