--- a/views/index.html
+++ b/views/index.html
@@ -1031,7 +1031,7 @@
                         <div class="col-lg-4 col-md-6">
                             <div class="member">
                                 <div class="pic">
-                                    <p
+                                    <img src="./views/assets/img/chefs"
                                         {{.Picture}}
                                         class="img-fluid"/>
                                 </div>
@@ -1322,8 +1322,7 @@
                                     name="ymail"
                                     id="email"
                                     placeholder="Email"
-                                    required
-                                />
+                                    required/>
                             </div>
                         </div>
                         <div class="form-group mt-3">
@@ -1348,10 +1347,7 @@
                         <div class="sent-message">
                             Lời nhắn của bạn đã được gửi. Xin cảm ơn!
                         </div>
-                        <div class="text-center">
-                            <button type="submit" onclick="contact()">Gửi</button>
-                            <p id="thanks"></p>
-                        </div>
+                        <div class="text-center"><button type="submit">Gửi</button></div>
                     </form>
                 </div>
             </section>
