--- a/views/add_chef.html
+++ b/views/add_chef.html
@@ -90,16 +90,14 @@
                             Ảnh
                         </label>
                         <div class="col-sm-10">
-                            <input
-                                type="file" id="myFile" name="pic">
-                                <!-- type="number"
-                                class="form-control-plaintext bg-warning"
-                                name="pic"
-                                id="anh"
-                                value="" -->
+                            <form action="/uphinh" method="post" enctype="multipart/form-data">
+                                <input
+                                    type="file" accept="image/*" name="avatar"/>
+                                <input class="btn btn-success" value="Lưu" type="submit" />
+                            </form>
                         </div>
                     </div>
-                    <input class="btn btn-success" value="Lưu" type="submit" />
+                    
                 </form>
             </div>
         </main>
